# neighborhood-meals

./: .gitignore  AGENTS.md  README.md  WHERE_AM_I.md  architecture.md  context.md  lees-process.md  product-definition.md  project-plan.md  pyproject.toml  result-review.md  sprint-plan.md  sprint-review.md
backend/: app.py  pyproject.toml
backend/neighborhood_meals/: __init__.py  routes.py
backlog/: schema.md  template.md
code-reviews/: review-2026-03-17.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
skills/: backlog.md  code-review.md  development-loop.md  documentation.md  test-as-lee.md
src/neighborhood-meals/: __init__.py  main.py
tests/: test_backend.py
